src/objects/PIADATA__c.object
<CustomObject>
    <fields>
        <fullName>BK_sum_kaiten__c</fullName>
        <defaultValue>0</defaultValue>
        <label>bk_集計_回転数</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BK_sum_tuujou__c</fullName>
        <defaultValue>0</defaultValue>
        <label>bk_集計_通常</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>after20__c</fullName>
        <formula>inputup80__c  -  inputup97__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>after20</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>baoji__c</fullName>
        <defaultValue>false</defaultValue>
        <label>baoji</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bk_X22__c</fullName>
        <formula>BK_sum_kaiten__c  /  BK_sum_tuujou__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>bk_通常(70)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bk_inputunder40__c</fullName>
        <defaultValue>0</defaultValue>
        <label>線(20)_B</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bk_inputunder63__c</fullName>
        <defaultValue>0</defaultValue>
        <label>bk_under63</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bk_inputup163__c</fullName>
        <defaultValue>0</defaultValue>
        <label>up163(20)_B</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bk_inputup80__c</fullName>
        <defaultValue>0</defaultValue>
        <label>確変_97(40)_B</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bk_inputup97__c</fullName>
        <defaultValue>0</defaultValue>
        <label>up97(20)_B</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inputunder40__c</fullName>
        <defaultValue>0</defaultValue>
        <label>線(20)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inputunder63__c</fullName>
        <defaultValue>0</defaultValue>
        <label>under63</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inputup163__c</fullName>
        <defaultValue>0</defaultValue>
        <label>up163(20)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inputup80__c</fullName>
        <defaultValue>0</defaultValue>
        <label>確変_97(40)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inputup97__c</fullName>
        <defaultValue>0</defaultValue>
        <label>up97(20)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>jisuanhouhuizhuan__c</fullName>
        <formula>kaiten_keisan__c + if( beforce__r.aren__c &gt; 1,130,100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>計算後回転</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kaiten_max__c</fullName>
        <defaultValue>0</defaultValue>
        <label>回転数_Max</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kakuhenkaiten__c</fullName>
        <defaultValue>0</defaultValue>
        <label>集計_確変回転数</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kakuhennrennRate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>確変連数</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kakuhenritu__c</fullName>
        <formula>IF( aren__c &gt;1, (kakuhenkaiten__c + 163)  /  aren__c ,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>確変率</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rensuu_8L__c</fullName>
        <formula>( beforce__r.aren__c
 + beforce__r.beforce__r.aren__c
 + beforce__r.beforce__r.beforce__r.aren__c
 + beforce__r.beforce__r.beforce__r.beforce__r.aren__c
 + beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.aren__c
 + beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.aren__c
 + beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.aren__c
 + beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.beforce__r.aren__c)/8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>連数_8L</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>totunyuuRate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>突入率</label>
        <precision>4</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
</CustomObject>